# mp3

./: .pre-commit-config.yaml  alembic.ini  celerybeat-schedule.db  init_db.py  mypy.ini  pyproject.toml  test_config.py
.github/workflows/: linting.yml
alembic/: env.py
alembic/versions/: 2e5b5e3839a5_add_user_model.py
app/: celery_app.py  main.py
app/api/endpoints/: auth.py  jobs.py  resumes.py  search.py
app/core/: config.py
app/db/: __init__.py  chroma_client.py  mongo_client.py  postgres_client.py
app/models/: job.py  resume.py  user.py
app/schemas/: auth.py  job.py  resume.py
app/services/: candidates.py  firebase_auth.py  llm_parser.py  pdf_parser.py  skill_extractor.py
chroma_db/: chroma.sqlite3
frontend/: home.py  utils.py
frontend/pages/: candidate_dashboard.py  candidate_ranking.py  candidate_search.py  job_management.py  login.py  recruiter_dashboard.py  register.py  resume_upload.py  resume_viewer.py
frontend/services/: api_client.py  auth.py
frontend/styles/: load_css.py  styles.css
