[project]
name = "resume-screener"
version = "0.1.0"
description = "AI-Powered Automated Resume Screener"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.5",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "pymongo>=4.3.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=3.15.0",
    "docx2txt>=0.8",
    "redis>=4.5.4",
    "spacy>=3.5.0",
    "scikit-learn>=1.2.2",
    "pgvector>=0.4.0",
    "ollama>=0.4.8",
    "chromadb>=1.0.6",
    "pyjwt>=2.10.1",
    "firebase-admin>=6.8.0",
    "celery>=5.5.2",
    "json5>=0.12.0",
    "streamlit>=1.45.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
